--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
 <p><a href=https://github.com/NitroGuy10>https://github.com/nitroguy10</a></p>
 <p><a href=https://soundcloud.com/nitroguy10>https://soundcloud.com/nitroguy10</a></p>
 <br />
-<p style="color: gray;">Last updated 4/17/2017 at 22:44:10 UTC</p>
+<p style="color: gray;">Last updated 4/20/2017 at ??? UTC</p>
 </body>
 </html>
