--- a/index.html
+++ b/index.html
@@ -14,32 +14,33 @@
 <script src="script.js"></script>
 <h1>Jumpy</h1>
 <h2>
-<p><button onclick="">Toggle Music</button>
+<p><!--<button onclick="">Toggle Music</button>-->
 <div class="list">
-<button class="listbutton">Level Select (Debug)</button>
+<button class="listbutton">Level Select</button>
 <div class="listoptions">
-<a onclick="gotoLevel(0)">1</a>
-<a onclick="gotoLevel(1)">2</a>
-<a onclick="gotoLevel(2)">3</a>
-<a onclick="gotoLevel(3)">4</a>
-<a onclick="gotoLevel(4)">5</a>
-<a onclick="gotoLevel(5)">6</a>
-<a onclick="gotoLevel(6)">7</a>
-<a onclick="gotoLevel(7)">8</a>
-<a onclick="gotoLevel(8)">9</a>
-<a onclick="gotoLevel(9)">10</a>
-<a onclick="gotoLevel(10)">11</a>
-<a onclick="gotoLevel(11)">12</a>
+<a class="lvl" onclick="gotoLevel(0)">1</a>
+<a class="lvl" onclick="gotoLevel(1)">2</a>
+<a class="lvl" onclick="gotoLevel(2)">3</a>
+<a class="lvl" onclick="gotoLevel(3)">4</a>
+<a class="lvl" onclick="gotoLevel(4)">5</a>
+<a class="lvl" onclick="gotoLevel(5)">6</a>
+<a class="lvl" onclick="gotoLevel(6)">7</a>
+<a class="lvl" onclick="gotoLevel(7)">8</a>
+<a class="lvl" onclick="gotoLevel(8)">9</a>
+<a class="lvl" onclick="gotoLevel(9)">10</a>
+<a class="lvl" onclick="gotoLevel(10)">11</a>
+<a class="lvl" onclick="gotoLevel(11)">12</a>
 </div>
 </div>
 </h2>
 <h2>How to play:</h2>
 <p id="directions"><strong>Use the arrow keys to move, avoid the red. Thats all!</strong></p>
 <br />
-<h2>By NitroGuy</h2>
+<h2>Game by NitroGuy</h2>
+<h2>Some levels by Raptarr</h2>
 <p><a href=https://github.com/NitroGuy10>https://github.com/nitroguy10</a></p>
 <p><a href=https://soundcloud.com/nitroguy10>https://soundcloud.com/nitroguy10</a></p>
 <br />
-<p style="color: gray;">Last updated 4/20/2017 at ??? UTC</p>
+<p style="color: gray;">Last updated 4/21/2017 at 02:29:40 UTC</p>
 </body>
 </html>
