--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 <a class="lvl" onclick="gotoLevel(9)">10</a>
 <a class="lvl" onclick="gotoLevel(10)">11</a>
 <a class="lvl" onclick="gotoLevel(11)">12</a>
+<a class="lvl" onclick="gotoLevel(12)" style="background-color:lightgray">13</a>
+<a class="lvl" onclick="gotoLevel(13)" style="background-color:lightgray">14</a>
 </div>
 </div>
 </h2>
