--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
 <a class="lvl" onclick="gotoLevel(9)">10</a>
 <a class="lvl" onclick="gotoLevel(10)">11</a>
 <a class="lvl" onclick="gotoLevel(11)">12</a>
-<a class="lvl" onclick="gotoLevel(12)" style="background-color:lightgray">13</a>
-<a class="lvl" onclick="gotoLevel(13)" style="background-color:lightgray">14</a>
+<div style="background-color:lightgray">
+<a class="lvl" onclick="gotoLevel(12)">13</a>
+<a class="lvl" onclick="gotoLevel(13)">14</a>
+<a class="lvl" onclick="gotoLevel(14)">15</a>
+</div>
 </div>
 </div>
 </h2>
