--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 <a class="lvl" onclick="gotoLevel(12)">13</a>
 <a class="lvl" onclick="gotoLevel(13)">14</a>
 <a class="lvl" onclick="gotoLevel(14)">15</a>
+<a class="lvl" onclick="gotoLevel(15)">16</a>
+<a class="lvl" onclick="gotoLevel(16)">17</a>
+<a class="lvl" onclick="gotoLevel(17)">18</a>
 </div>
 </div>
 </div>
