--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <a class="lvl" onclick="gotoLevel(15)">16</a>
 <a class="lvl" onclick="gotoLevel(16)">17</a>
 <a class="lvl" onclick="gotoLevel(17)">18</a>
+<a class="lvl" onclick="gotoLevel(18)">19</a>
 </div>
 </div>
 </div>
