--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 <a class="lvl" onclick="gotoLevel(16)">17</a>
 <a class="lvl" onclick="gotoLevel(17)">18</a>
 <a class="lvl" onclick="gotoLevel(18)">19</a>
+<a class="lvl" onclick="gotoLevel(19)">20</a>
+<a class="lvl" onclick="gotoLevel(20)">21</a>
 </div>
 </div>
 </div>
@@ -50,6 +52,6 @@
 <p><a href=https://github.com/NitroGuy10>https://github.com/nitroguy10</a></p>
 <p><a href=https://soundcloud.com/nitroguy10>https://soundcloud.com/nitroguy10</a></p>
 <br />
-<p style="color: gray;">Last updated 5/31/2017 at 14:03:10 UTC</p>
+<p style="color: gray;">Last updated 6/1/2017 at 02:26:40 UTC</p>
 </body>
 </html>
