--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
 <p><a href=https://github.com/NitroGuy10>https://github.com/nitroguy10</a></p>
 <p><a href=https://soundcloud.com/nitroguy10>https://soundcloud.com/nitroguy10</a></p>
 <br />
-<p style="color: gray;">Last updated 6/1/2017 at 02:26:40 UTC</p>
+<p style="color: gray;">Last updated 6/15/2017 at 14:57:40 UTC</p>
+<br/>
+<hr />
+<footer>© 2017 NitroGuy</footer>
 </body>
 </html>
