--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 <meta name=keywords content="Jumpy,NitroGuy,NitroGuy10">
 <meta name=author content="NitroGuy/NitroGuy10">
 <meta name=viewport content="width=device-width, initial-scale=1.0">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/manifest.json">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="theme-color" content="#ffffff">
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -52,7 +58,7 @@
 <p><a href=https://github.com/NitroGuy10>https://github.com/nitroguy10</a></p>
 <p><a href=https://soundcloud.com/nitroguy10>https://soundcloud.com/nitroguy10</a></p>
 <br />
-<p style="color: gray;">Last updated 6/15/2017 at 14:57:40 UTC</p>
+<p style="color: gray;">Last updated 6/15/2017 at 15:16:00 UTC</p>
 <br/>
 <hr />
 <footer>© 2017 NitroGuy</footer>
