--- a/index.html
+++ b/index.html
@@ -7,12 +7,6 @@
 <meta name=keywords content="Jumpy,NitroGuy,NitroGuy10">
 <meta name=author content="NitroGuy/NitroGuy10">
 <meta name=viewport content="width=device-width, initial-scale=1.0">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/manifest.json">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-<meta name="theme-color" content="#ffffff">
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -24,6 +18,7 @@
 <div class="list">
 <button class="listbutton">Level Select</button>
 <div class="listoptions">
+<div style="background-color:#cce6ff">
 <a class="lvl" onclick="gotoLevel(0)">1</a>
 <a class="lvl" onclick="gotoLevel(1)">2</a>
 <a class="lvl" onclick="gotoLevel(2)">3</a>
@@ -36,7 +31,8 @@
 <a class="lvl" onclick="gotoLevel(9)">10</a>
 <a class="lvl" onclick="gotoLevel(10)">11</a>
 <a class="lvl" onclick="gotoLevel(11)">12</a>
-<div style="background-color:lightgray">
+</div>
+<div style="background-color:#ffb3ff">
 <a class="lvl" onclick="gotoLevel(12)">13</a>
 <a class="lvl" onclick="gotoLevel(13)">14</a>
 <a class="lvl" onclick="gotoLevel(14)">15</a>
@@ -45,22 +41,22 @@
 <a class="lvl" onclick="gotoLevel(17)">18</a>
 <a class="lvl" onclick="gotoLevel(18)">19</a>
 <a class="lvl" onclick="gotoLevel(19)">20</a>
-<a class="lvl" onclick="gotoLevel(20)">21</a>
 </div>
+<a class="lvl" onclick="gotoLevel(20)" style="background-color:#ff0000">!</a>
+<a class="lvl" onclick="gotoLevel(21)" style="background-color:#00ff00">:)</a>
 </div>
 </div>
 </h2>
 <h2>How to play:</h2>
 <p id="directions"><strong>Use the arrow keys to move, avoid the red. Thats all!</strong></p>
 <br />
+<p><button id="creatorbutton"><strong><a href="creator.html" id="creator">Level Creator</a></strong></button></p>
 <h2>Game by NitroGuy</h2>
 <h2>Some levels by Raptarr</h2>
+<p><a href=https://nitroguy10.github.io>https://nitroguy10.github.io</a></p>
 <p><a href=https://github.com/NitroGuy10>https://github.com/nitroguy10</a></p>
 <p><a href=https://soundcloud.com/nitroguy10>https://soundcloud.com/nitroguy10</a></p>
 <br />
-<p style="color: gray;">Last updated 6/15/2017 at 15:16:00 UTC</p>
-<br/>
-<hr />
-<footer>© 2017 NitroGuy</footer>
+<p style="color: gray;">Last updated 6/1/2017 at 02:26:40 UTC</p>
 </body>
 </html>
