--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
 <p><a href=https://github.com/NitroGuy10>https://github.com/nitroguy10</a></p>
 <p><a href=https://soundcloud.com/nitroguy10>https://soundcloud.com/nitroguy10</a></p>
 <br />
-<p style="color: gray;">Last updated 7/12/2017 at 14:56:10 UTC</p>
+<p style="color: gray;">Last updated 8/23/2017 at 22:38:00 UTC</p>
+<br/>
+<hr />
+<footer>© 2017 NitroGuy</footer>
 </body>
 </html>
