--- a/creator.html
+++ b/creator.html
@@ -101,6 +101,9 @@ h3 {
 <p><a href=https://github.com/NitroGuy10>https://github.com/nitroguy10</a></p>
 <p><a href=https://soundcloud.com/nitroguy10>https://soundcloud.com/nitroguy10</a></p>
 <br />
-<p style="color: gray;">Last updated 7/30/2017 at 14:03:00 UTC</p>
+<p style="color: gray;">Last updated 8/23/2017 at 22:38:30 UTC</p>
+<br/>
+<hr />
+<footer>© 2017 NitroGuy</footer>
 </body>
 </html>
