--- a/mobile.html
+++ b/mobile.html
@@ -8,15 +8,14 @@
 <meta name=keywords content="Jumpy,NitroGuy,NitroGuy10">
 <meta name=author content="NitroGuy/NitroGuy10">
 <meta name=viewport content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="MobileStyle.css">
+<link rel="stylesheet" type="text/css" href="mstyle.css">
 </head>
 <body>
 <div id="all">
 <div id="joystick">
 <canvas id="canvas" style="width:90%"></canvas>
-<script src="VirtualJoystick.js"></script>
-<!--https://raw.githubusercontent.com/jeromeetienne/virtualjoystick.js/master/virtualjoystick.js-->
-<script src="MobileScript.js"></script>
+<script src="https://raw.githubusercontent.com/jeromeetienne/virtualjoystick.js/master/virtualjoystick.js"></script>
+<script src="mscript.js"></script>
 <h1>Jumpy</h1>
 <h2>
 <p><!--<button onclick="">Toggle Music</button>-->
