--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 <canvas id="canvas"></canvas>
 <script src="script.js"></script>
+  <script src="detect.js"></script>
 <h1>Jumpy</h1>
 <h2>
 <p><!--<button onclick="">Toggle Music</button>-->
