errors errors errors

--- a/mobile.html
+++ b/mobile.html
@@ -1,6 +1,5 @@
 ﻿<!DOCTYPE html>
 <html>
-<!--Be sure to replace script and css file names in script and link tags-->
 <head>
 <title>Jumpy Mobile</title>
 <meta charset=UTF-8>
@@ -15,7 +14,7 @@
 <div id="joystick">
 <canvas id="canvas" style="width:90%"></canvas>
 <script src="https://raw.githubusercontent.com/jeromeetienne/virtualjoystick.js/master/virtualjoystick.js"></script>
-<script src="mscript.js"></script>
+<script src="mscript.js" type="text/javascript"></script>
 <h1>Jumpy</h1>
 <h2>
 <p><!--<button onclick="">Toggle Music</button>-->
