--- a/mobile.html
+++ b/mobile.html
@@ -13,8 +13,8 @@
 <div id="all">
 <div id="joystick">
 <canvas id="canvas" style="width:90%"></canvas>
-<script src="https://raw.githubusercontent.com/jeromeetienne/virtualjoystick.js/master/virtualjoystick.js"></script>
-<script src="mscript.js" type="text/javascript"></script>
+<script src="https://raw.githubusercontent.com/jeromeetienne/virtualjoystick.js/master/virtualjoystick.js" type="text/javascript"></script>
+<script src="mscript.js"></script>
 <h1>Jumpy</h1>
 <h2>
 <p><!--<button onclick="">Toggle Music</button>-->
