--- a/mobile.html
+++ b/mobile.html
@@ -13,7 +13,7 @@
 <div id="all">
 <div id="joystick">
 <canvas id="canvas" style="width:90%"></canvas>
-<script src="virtualjoystick.js"></script>
+<script src="virtualjoystick/virtualjoystick.js"></script>
 <script src="mscript.js"></script>
 <h1>Jumpy</h1>
 <h2>
