Out with the old

--- a/creatorOld.html
+++ b/creatorOld.html
@@ -62,7 +62,7 @@ h3 {
 </head>
 <body onbeforeunload="return unload()">
 <canvas id="canvas"></canvas>
-<script src="creatorscript.js"></script>
+<script src="creatorscriptOld.js"></script>
 <h1>Jumpy Level Creator</h1>
 <p><!--<button onclick="">Toggle Music</button>-->
 <p><button id="worldbutton" onclick="incWorld()">Normal</button>    <button onclick="clearLvl()">Clear</button>    <button onclick="save()">Save</button></p>
