--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <meta name=author content="NitroGuy/NitroGuy10">
 <meta name=viewport content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="style.css">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
 <canvas id="canvas"></canvas>
@@ -58,7 +60,7 @@
 <p><a href=https://github.com/NitroGuy10>https://github.com/nitroguy10</a></p>
 <p><a href=https://soundcloud.com/nitroguy10>https://soundcloud.com/nitroguy10</a></p>
 <br />
-<p style="color: gray;">Last updated 1/31/2018 at 21:52:20 UTC</p>
+<p style="color: gray;">Last updated 7/31/2018 at 22:56:20 UTC</p>
 <br/>
 <hr />
 <footer>© 2018 NitroGuy</footer>
