Level creator overhaaaaaaaaaul

--- a/creator.html
+++ b/creator.html
@@ -71,9 +71,6 @@ h3 {
     user-select: none;
 	background-color: #DDDDDD;
 }
-#paletteChoice:hover {
-	background-color: #BBBBBB;
-}
 .choice0 {
 	color: #550000;
 }
@@ -123,7 +120,7 @@ h3 {
 </div>
 </p>
 <h2>How to use:</h2>
-<p><strong>Click on the squares above to place tiles. Click multiple times to change the block type. When you are done, click "Save". You will receive a string of numbers and commas. Copy this string into a text document on your computer or somewhere else where you can store it. Anytime you want to play your level again, copy your string into the text box and click "Load".</strong></p>
+<p><strong>Select a block type from the palette and click and drag on the squares above to place tiles. When you are done, click "Save". You will receive a string of numbers and commas. Copy this string into a text document on your computer or somewhere else where you can store it. Anytime you want to play your level again, copy your string into the text box and click "Load".</strong></p>
 <br />
 <h3>Load/Save Box</h3>
 <textarea rows="12" cols="69" maxlength="673" id="slbox">
