--- a/creator.html
+++ b/creator.html
@@ -132,11 +132,11 @@ h3 {
 <p><button id="creatorbutton"><strong><a href="index.html" id="creator">Jumpy</a></strong></button></p>
 <p><a href=https://nitroguy10.github.io>https://nitroguy10.github.io</a></p>
 <p><a href=https://github.com/NitroGuy10>https://github.com/nitroguy10</a></p>
-<p><a href=https://soundcloud.com/nitroguy10>https://soundcloud.com/nitroguy10</a></p>
 <br />
-<p style="color: gray;">Last updated 7/31/2018 at 23:10:50 UTC</p>
+<p style="color: gray;">Patched on 12/31/2021 at 05:56:20 UTC</p>
+<p style="color: gray;">Before that, last updated 7/31/2018 at 23:10:50 UTC</p>
 <br/>
 <hr />
-<footer>© 2018 NitroGuy</footer>
+<footer>© 2021 NitroGuy</footer>
 </body>
 </html>
