Disclaimer and 60hz special case

--- a/creator.html
+++ b/creator.html
@@ -119,6 +119,13 @@ h3 {
 </table>
 </div>
 </p>
+<div id="highfps-warning">
+	<h2 style="color: red;">High refresh rate detected!</h2>
+	<details>
+	<summary>High framerate info</summary>
+	<p>Jumpy was made in 2017 back when I was a very amateur programmer. As such the physics depended on the refresh rate of the monitor, and were just pretty janky in general. I've <em>tried</em> to correct for that as best I can using "delta time" but the physics are still not 1-to-1 with the original 60hz edition (namely, with higher refresh rates, you jump higher and have much less horizontal damping). This makes the gameplay different (easier?) from the original so I would recommend playing the game on a computer with only 60hz monitors for authenticity.</p>
+	</details>
+</div>
 <h2>How to use:</h2>
 <p><strong>Select a block type from the palette and click and drag on the squares above to place tiles. When you are done, click "Save". You will receive a string of numbers and commas. Copy this string into a text document on your computer or somewhere else where you can store it. Anytime you want to play your level again, copy your string into the text box and click "Load".</strong></p>
 <br />
