It actually works now

--- a/creator.html
+++ b/creator.html
@@ -119,7 +119,7 @@ h3 {
 </table>
 </div>
 </p>
-<div id="highfps-warning">
+<div id="highfps-warning" style="display: none;">
 	<h2 style="color: red;">High refresh rate detected!</h2>
 	<details>
 	<summary>High framerate info</summary>
