--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script src="detect.js"></script>
 <h1>Jumpy</h1>
 
-<div id="highfps-warning">
+<div id="highfps-warning" style="display: none;">
   <h2 style="color: red;">High refresh rate detected!</h2>
   <details>
     <summary>High framerate info</summary>
